--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     },
     "config": {
         "allow-plugins": {
+            "platform-check": false,
             "php-http/discovery": true,
             "symfony/flex": true,
             "symfony/runtime": true
